crates/analyzer/tests/snapshots/errors__call_send_value_with_1_arg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `send_value` expects 2 arguments, but 1 was provided
  ┌─ [snippet]:3:3
  │
3 │   send_value(address(0))
  │   ^^^^^^^^^^ ---------- supplied 1 argument
  │   │           
  │   expects 2 arguments


